Fix routes products invoice -> ajout quantity + update invoice product
